bluejay-validator/tests/snapshots/executable_integration_test__error@all_variable_usages_allowed_extended.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/all_variable_usages_allowed_extended.graphql
---
Error: Variable $a of type String cannot be used here, where Boolean is expected
   ╭─[ all_variable_usages_allowed_extended.graphql:4:33 ]
   │
 4 │     booleanArgField(booleanArg: $a)
   │                                 ─┬  
   │                                  ╰── Cannot use variable of type String where Boolean is expected
───╯

Error: Variable $a of type [Boolean] cannot be used here, where [Boolean!] is expected
    ╭─[ all_variable_usages_allowed_extended.graphql:12:52 ]
    │
 12 │     nonNullBooleanListField(nonNullBooleanListArg: $a)
    │                                                    ─┬  
    │                                                     ╰── Cannot use variable of type [Boolean] where [Boolean!] is expected
────╯

Error: Variable $a of type Int cannot be used here, where Int! is expected
    ╭─[ all_variable_usages_allowed_extended.graphql:19:39 ]
    │
 19 │     nonNullIntArgField(nonNullIntArg: $a)
    │                                       ─┬  
    │                                        ╰── Cannot use variable of type Int where Int! is expected
────╯

Error: Variable $a of type Boolean cannot be used here, where Boolean! is expected
    ╭─[ all_variable_usages_allowed_extended.graphql:25:20 ]
    │
 25 │   dog @include(if: $a) {
    │                    ─┬  
    │                     ╰── Cannot use variable of type Boolean where Boolean! is expected
────╯
